try to correct overflow in mobile

--- a/09-Bonus-Sass/css/style.css
+++ b/09-Bonus-Sass/css/style.css
@@ -21,6 +21,11 @@ ul, li {
   list-style: none;
 }
 
+html {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
 body {
   font-family: "Commissioner", sans-serif;
   overflow-x: hidden;
